fixed some of the text wrapping in the newsletter form component that is used on the homepage

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -134,6 +134,10 @@ footer {
   padding-right: 10vw;
 }
 
+.small-res-newsletter{
+  visibility: hidden;
+}
+
 /////////////////////////////////////////////////////
 
 //////////////////Footer//////////////////////
